major overhaul to css structure

--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 * {
-    box-sizing: border-box;
+    text-shadow: 2px 0 5px white;
+    color: black;
+    font-family: cursive;
+    f
 }
 
 body {
@@ -8,87 +11,59 @@ body {
 }
 
 header {
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        background-color: black;
-        color: white;
-        padding-left: 20px;
-        padding-right: 20px;
-        
+        color: black;
 }
 
 #logo {
     font-size: xx-large;
-    background-color: black;
-    padding-right:10px;
-    padding-bottom: 10px;
-    padding-top: 20px;
-    padding-left: 15px;
-    padding-right: 15px;
-    color: whitesmoke;
+    float: left;
+    
 }
 
 a {
-    color: white;
+    color: black;
     text-decoration: none;
-    font-weight: bolder;
-    font-size: xx-large;
-    background-color: black;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 10px;
-    padding-top: 10px;
+}
+
+.navigation {
+    display: flex;
+
+
 }
 
 nav {
-    float: right;
-    padding-top: 42px;
-
-    
+    float: right;    
 }
 
 nav ul {
     list-style-type: none;
-    
-    
 }
 
 nav ul li {
     display: inline-block;
     margin-left: 25px;
-    padding-left: 20px;
-    
+    padding-left: 20px;  
 }
 
+h1 {
+    float: left;
+}
+
+section {
+    padding-top: 225px;
+}
 #bio {
     padding-top: 220px;
-    font-weight: bolder;
-    font-size: xx-large;
-    color: white;
 }
 
 #work {
-    padding-bottom: 75px;
-    font-weight: bolder;
-    font-size: xx-large;
-    color: white;
+    padding-bottom: 75px;    
+}
+
+img {
+    border: 5px solid black;
 }
 
 #contact {
     padding-bottom: 75px;
-    font-weight: bolder;
-    font-size: xx-large;
-    color: white;
-}
-
-h1 {
-    background-color: black;
-    width: 250px;
-
-}
-
-p,
-h3 {
-    text-shadow: 2px 0 5px white;
-    font-weight: bold;
-    color: black
-}
+}    
