--- a/style.css
+++ b/style.css
@@ -1,69 +1,133 @@
-* {
-    text-shadow: 2px 0 5px white;
-    color: black;
-    font-family: cursive;
-    f
-}
-
 body {
-    background-image: url(images/background.JPEG);
-    text-align: center;
-}
-
-header {
-        color: black;
-}
-
-#logo {
-    font-size: xx-large;
-    float: left;
-    
-}
-
-a {
-    color: black;
-    text-decoration: none;
-}
-
-.navigation {
-    display: flex;
-
-
-}
-
-nav {
-    float: right;    
-}
-
-nav ul {
-    list-style-type: none;
-}
-
-nav ul li {
-    display: inline-block;
-    margin-left: 25px;
-    padding-left: 20px;  
-}
-
-h1 {
-    float: left;
+    font-family:cursive;
 }
 
 section {
-    padding-top: 225px;
-}
-#bio {
-    padding-top: 220px;
+    background-color: white;
 }
 
-#work {
-    padding-bottom: 75px;    
+.hero {
+    background-color: black;
+    height: 100vh;
+    color: white;
+    font-size: 40px;
 }
 
-img {
-    border: 5px solid black;
+nav {
+    display: flex;
+    justify-content: space-between;
 }
 
-#contact {
-    padding-bottom: 75px;
-}    
+.logo {
+    height: 175px;
+    width: 125px;
+    margin: 15px;
+}
+
+ul {
+    display: flex;
+    list-style-type: none;
+    width: 500px;
+    justify-content: space-between;
+    font-size: 30px;
+}
+
+li {
+    text-decoration: none;
+}
+
+h1 {
+    font-size: 90px;
+    margin: 0;
+}
+
+h2 {
+    font-size: 60px;
+}
+
+p {
+    font-size: 30px;
+    margin: 0;
+    font-weight: 100;
+}
+
+.subtext {
+    font-size: 15px;
+    font-weight: 50;
+}
+
+.hero-area {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+}
+
+.hero-text {
+    margin-left: 40px;
+    margin-bottom: 200px;
+    text-align: center;
+}
+
+.sub-section {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    padding: 80px;
+
+}
+
+.sub-section-deux {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 80px;
+}
+
+.headshot-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 100px;
+}
+
+.headshot {
+    width: 250px;
+    border-radius: 150px;
+    margin-top: 50px;
+}
+
+.project-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+@media only screen and (max-width: 1000px) {
+    .project-container {
+        display: flex;
+        flex: wrap;
+    }
+}
+
+.project-image {
+    width: 300px;
+    border-radius: 175px;
+    margin-top: 30px;
+}
+
+.click {
+    color: black;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 80px;
+}
