--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+* {
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+
+
 body {
     font-family:cursive;
 }
@@ -16,6 +25,7 @@ section {
 nav {
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 
 .logo {
@@ -28,8 +38,10 @@ ul {
     display: flex;
     list-style-type: none;
     width: 500px;
-    justify-content: space-between;
+    justify-content: space-around;
     font-size: 30px;
+    padding-right: 100px;
+    padding-top: 100px;;
 }
 
 li {
@@ -102,6 +114,7 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 100px;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -111,14 +124,24 @@ p {
     }
 }
 
+@media screen and (max-width: 768px) {
+    ul,
+    body { display: flex;
+        flex-direction: column;
+        
+    }
+}
+
 .project-image {
     width: 300px;
     border-radius: 175px;
     margin-top: 30px;
+    
 }
 
-.click {
-    color: black;
+.project-image:hover {
+    transform: scale(1.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 a {
