--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
     box-sizing: border-box;
 }
 
-
 body {
     font-family:cursive;
 }
@@ -49,7 +48,7 @@ li {
 }
 
 h1 {
-    font-size: 90px;
+    font-size: 60px;
     margin: 0;
 }
 
@@ -63,9 +62,20 @@ p {
     font-weight: 100;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
 .subtext {
     font-size: 15px;
     font-weight: 50;
+}
+
+.hero-text {
+    margin-left: 40px;
+    margin-bottom: 200px;
+    text-align: center;
 }
 
 .hero-area {
@@ -73,12 +83,6 @@ p {
     flex-direction: column;
     height: 100%;
     justify-content: center;
-}
-
-.hero-text {
-    margin-left: 40px;
-    margin-bottom: 200px;
-    text-align: center;
 }
 
 .sub-section {
@@ -117,21 +121,6 @@ p {
     margin: 100px;
 }
 
-@media only screen and (max-width: 1000px) {
-    .project-container {
-        display: flex;
-        flex: wrap;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    ul,
-    body { display: flex;
-        flex-direction: column;
-        
-    }
-}
-
 .project-image {
     width: 300px;
     border-radius: 175px;
@@ -144,13 +133,29 @@ p {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-a {
-    text-decoration: none;
-    color: white;
-}
 footer {
     background-color: black;
     color: white;
     text-align: center;
     padding: 80px;
 }
+
+@media only screen and (min-width: 768px) {
+    .project-container {
+        display: flex;
+        flex: wrap;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    ul { 
+        display: flex;
+        flex-direction: column;
+        
+    }
+
+    .footer-email {
+        font-size: 15px;
+    }
+}
+
