--- a/style.css
+++ b/style.css
@@ -119,6 +119,19 @@ a {
     margin: 100px;
 }
 
+#pro1  {
+    padding-bottom: 200px;
+}
+
+#pro2  {
+    padding-bottom: 200px;
+}
+
+#pro3  {
+    padding-bottom: 200px;
+}
+
+
 .headshot {
     width: 250px;
     border-radius: 150px;
